--- a/newsletter.html
+++ b/newsletter.html
@@ -64,15 +64,15 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Spring Motorcycle Show</h2>
-										<p>Come join us at our booth.</p>
+										<h2 class="major">Magna arcu feugiat</h2>
+										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
 
 						<!-- Two -->
-							<!--<section id="two" class="wrapper alt spotlight style2">
+							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
@@ -81,10 +81,10 @@
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
-							</section>-->
+							</section>
 
 						<!-- Three -->
-							<!--<section id="three" class="wrapper spotlight style3">
+							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
@@ -93,13 +93,13 @@
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
-							</section>-->-->
+							</section>
 
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Moto Guzzi News Express</h2>
-									<p>Editor Pat Castel is back with a new issue for winter.</p>
+									<h2 class="major">Vitae phasellus</h2>
+									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
