--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Ontario Guzzi Riders</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -47,7 +47,7 @@
 						<div class="inner">
 							<!--<div class="logo"><span class="icon fa-gem"></span></div>
 							<img alt="" height="79" src="sitebuilder/images/motoguzzilogo.jpg" width="146" />-->
-							<a href="#" class="image"><img src="images/motoguzzilogo.jpg" alt="" height="210" width="450"/></a>
+							<a href="#" class="image"><img src="images/motoguzzilogo.png" alt="" height="340" width="902"/></a>
 							<h2>The Ontario Guzzi Riders</h2>
 							<p>. . . are a loosely-knit bunch of motorcycle enthusiasts who believe that Moto Guzzi motorcycles can
 								provide a satisfaction of ownership and a joy of riding that few other motorcycles can. We tend to be
@@ -62,11 +62,13 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<!--<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>-->
+									<a href="#" class="image"><img id="comp-jcaq95khimgimage" alt="SMS 2020-LOGO (1).png" data-type="image" itemprop="image" style="width: 246px; height: 129px; object-fit: cover;" src="https://static.wixstatic.com/media/d4ae06_4462e920b05e444b8fb3d3448fa9c84f~mv2.png/v1/fill/w_246,h_129,al_c,q_80,usm_0.66_1.00_0.01/SMS%202020-LOGO%20(1).webp" data-src="" /></a>
 									<div class="content">
 										<h2 class="major">Spring Motorcycle Show</h2>
-										<p>Come join us at our booth.</p>
-										<a href="#" class="special">Learn more</a>
+										<p>Come join us at our booth - Saturday, April 4th and Sunday, April 5th, 2020.</p>
+										<p>International Centre</p>
+										<a class="special" href="https://www.motorcyclespringshow.com/" target="_blank">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -93,7 +95,7 @@
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
-							</section>-->-->
+							</section>-->
 
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
@@ -171,7 +173,7 @@
 								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Ontario Guzzi Riders. All rights reserved.</li><li>Design: Paolo La Vita</li>
 							</ul>
 						</div>
 					</section>
