--- a/calendar.html
+++ b/calendar.html
@@ -33,6 +33,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="about.html">About Us</a></li>
 								<li><a href="calendar.html">Event Calendar</a></li>
+								<li><a href="newsletter.html">Newsletter</a></li>
 								<li><a href="elements.html">Elements</a></li>
 								<!--<li><a href="#">Log In</a></li>
 								<li><a href="#">Sign Up</a></li>-->
@@ -120,7 +121,7 @@
 								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Ontario Guzzi Riders. All rights reserved.</li><li>Design: Paolo La Vita</li>
 							</ul>
 						</div>
 					</section>
