--- a/newsletter.html
+++ b/newsletter.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Ontario Guzzi Riders</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -43,58 +43,9 @@
 					</nav>
 
 				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<!--<div class="logo"><span class="icon fa-gem"></span></div>
-							<img alt="" height="79" src="sitebuilder/images/motoguzzilogo.jpg" width="146" />-->
-							<a href="#" class="image"><img src="images/motoguzzilogo.jpg" alt="" height="210" width="450"/></a>
-							<h2>The Ontario Guzzi Riders</h2>
-							<p>. . . are a loosely-knit bunch of motorcycle enthusiasts who believe that Moto Guzzi motorcycles can
-								provide a satisfaction of ownership and a joy of riding that few other motorcycles can. We tend to be
-								mature riders who realize that spec sheets and race results don&#39;t tell the whole story, and we enjoy the
-								company of like-minded enthusiasts, which is why the Ontario Guzzi Riders came into being..</p>
-						</div>
-					</section>
 
 				<!-- Wrapper -->
-					<section id="wrapper">
-
-						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
+					
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
@@ -171,7 +122,7 @@
 								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Ontario Guzzi Riders. All rights reserved.</li><li>Design: Paolo La Vita</li>
 							</ul>
 						</div>
 					</section>
