--- a/calendar.html
+++ b/calendar.html
@@ -110,15 +110,14 @@
 							</form>
 							<ul class="contact">
 								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
+									Phil Tunbridge<br />
+									89 Lougheed Road<br />
+									Barrie, Ontario, L4N 8E1
 								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<li class="icon solid fa-phone">(705) 722-3312</li>
+								<li class="icon solid fa-envelope"><a href="#">guzziphil@hotmail.com</a></li>
+								<li class="icon solid fa-object-group"><a href="https://groups.io/g/OGR" target="_blank">groups.io/g/OGR</a></li>
+								<li class="icon brands fa-facebook-f"><a href="https://www.facebook.com/OntarioGuzziRiders/" target="_blank">facebook.com/OntarioGuzziRiders/</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Ontario Guzzi Riders. All rights reserved.</li><li>Design: Paolo La Vita</li>
