--- a/newsletter.html
+++ b/newsletter.html
@@ -49,37 +49,115 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h2 class="major">Moto Guzzi News Express</h2>
+									<h2 class="major">Official Newsletter of the Ontario Guzzi Riders</h2>
+									<p>Yes, it's true. Thanks to the efforts of our editor, Pat Castel, and our founder, Phil Tunbridge, we now have our
+										very own, professional quality, periodic newsletter!  Please watch this space, where new issues will be posted as
+										they become available.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="../images/News_Express_N_17.jpg" alt="" /></a>
+											<h3 class="major">Special Edition N 17</h3>
+											<p>Posted September1, 2019</p>
+											<a href="../files/News_Express_N_17.pdf" target="_blank" class="special">Download .pdf</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="../images/Fall_Edition_N_16.jpg" alt="" /></a>
+											<h3 class="major">Fall Edition N 16</h3>
+											<p>Posted September 30, 2019</p>
+											<a href="../files/Fall_Edition_N_16.pdf" target="_blank"class="special">Download .pdf</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="../images/News_Express_N_15.jpg" alt="" /></a>
+											<h3 class="major">Special Edition No 15</h3>
+											<p>Posted January 5, 2019</p>
+											<a href="../files/News_Express_N_15.pdf" target="_blank" class="special">Download .pdf</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="../sitebuilder/images/First_Edition_72x94_72dpi.jpg" alt="" /></a>
+											<h3 class="major">First Edition</h3>
+											<p>Posted January 5, 2017</p>
+											<a href="../files/News_Express_First_Edition.pdf" target="_blank" class="special">Download .pdf</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="../sitebuilder/images/MGNE_March_Cover-64x94.png"  alt="" /></a>
+											<h3 class="major">Edition No 1</h3>
+											<p>Posted February 26, 2017</p>
+											<a href="../files/News_Express_N_1.pdf" target="_blank" class="special">Download .pdf</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="../sitebuilder/images/Special_Edition_1_Cover-66x99.jpg" alt="" /></a>
+											<h3 class="major">April Special Edition</h3>
+											<p>Posted March 29, 2017</p>
+											<a href="../files/Special_Edition_1.pdf" target="_blank" class="special">Download .pdf</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="../images/Special_Edition_N_8.jpg" alt="" /></a>
+											<h3 class="major">May Special Edition</h3>
+											<p>Posted May 22, 2018</p>
+											<a href="../files/Special_Edition_8.pdf" target="_blank" class="special">Download .pdf</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="../images/Special_Edition_N_14.jpg" alt="" /></a>
+											<h3 class="major">March Special Edition</h3>
+											<p>Posted March 31, 2019</p>
+											<a href="../files/Special_Edition_N_14.pdf" target="_blank" class="special">Download .pdf</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="../images/Special_Edition_N_11.jpg" alt="" /></a>
+											<h3 class="major">November Special Edition</h3>
+											<p>Posted November 5, 2018</p>
+											<a href="../files/Special_Edition_N_11.pdf" target="_blank" class="special">Download .pdf</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="../images/News_Express_N_4_Cover.jpg" alt="" /></a>
+											<h3 class="major">News Express N 4</h3>
+											<p>Posted September 15, 2017</p>
+											<a href="../files/News_Express_N_4.pdf" target="_blank" class="special">Download .pdf</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="../images/Special_Edition_N_5_Cover.jpg" alt="" /></a>
+											<h3 class="major">Special Edition N 5</h3>
+											<p>Posted October 21, 2017</p>
+											<a href="../files/News_Express_N_5.pdf" target="_blank" class="special">Download .pdf</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="../images/Special_Edition_N_6_Cover.jpg" alt="" /></a>
+											<h3 class="major">Current Edition</h3>
+											<p>Posted December 27, 2017</p>
+											<a href="../files/News_Express_N_6.pdf" target="_blank" class="special">Download .pdf</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="../images/Summer_Newsletter_N_9.jpg" alt="" /></a>
+											<h3 class="major">Summer Newsletter N 9</h3>
+											<p>Posted July 8, 2018</p>
+											<a href="../files/Summer_Newsletter_N_9.pdf" target="_blank" class="special">Download .pdf</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="../images/Winter_Newsletter_N_12.png" alt="" /></a>
+											<h3 class="major">Winter Newsletter N 12</h3>
+											<p>Posted January 15, 2019</p>
+											<a href="../files/Winter_Newsletter_N_12.pdf" target="_blank" class="special">Download .pdf</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="../images/Spring_Newsletter_N_13.jpg" alt="" /></a>
+											<h3 class="major">Spring Newsletter N 13</h3>
+											<p>Posted March 4, 2019</p>
+											<a href="../files/Spring_Newsletter_N_13.pdf" target="_blank" class="special">Download .pdf</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="../images/News_Express_N_7.jpg" alt="" /></a>
+											<h3 class="major">News Express N 7</h3>
+											<p>Posted July 8, 2018</p>
+											<a href="../files/News_Express_N_7.pdf" target="_blank" class="special">Download .pdf</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="../images/Fall_Newsletter_N_10.png" alt="" /></a>
+											<h3 class="major">Fall Newsletter N 10</h3>
+											<p>Posted October 21, 2018</p>
+											<a href="../files/Fall_Newsletter_N_10.pdf" target="_blank" class="special">Download .pdf</a>
 										</article>
 									</section>
-									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
 								</div>
 							</section>
 
