--- a/index.html
+++ b/index.html
@@ -104,32 +104,20 @@
 									<p>Editor Pat Castel is back with a new issue for winter.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="../images/News_Express_N_17.jpg" alt="" /></a>
+											<h3 class="major">Special Edition N 17</h3>
+											<p>Posted September 1, 2019</p>
+											<a href="../files/News_Express_N_17.pdf" target="_blank" class="special">Download .pdf</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="../images/Fall_Edition_N_16.jpg" alt="" /></a>
+											<h3 class="major">Fall Edition N 16</h3>
+											<p>Posted September 30, 2019</p>
+											<a href="../files/Fall_Edition_N_16.pdf" target="_blank"class="special">Download .pdf</a>
 										</article>
 									</section>
 									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
+										<li><a href="newsletter.html" class="button">Browse All</a></li>
 									</ul>
 								</div>
 							</section>
