--- a/calendar.html
+++ b/calendar.html
@@ -47,7 +47,18 @@
 						<header>
 							<div class="inner">
 								<h2>Event Calendar</h2>
-								<p>Calendar will go here.</p>
+
+								<section>
+									<h3 class="major">ONTARIO GUZZI RIDERS 2019 EVENT CALENDAR</h3>
+									<h4>All Makes Welcome on Our Rides!</h4>
+									<div class="box alt">
+										<div class="row gtr-uniform">
+											<div class="col-12"><span class="image fit"><img src="images/2020_OGR_calendar.png" alt="" /></span></div>
+											<a href="files/2020_OGR_calendar.pdf" target="_blank" class="special">Click here to download our current ride
+												calendar in PDF form.</a>
+										</div>
+									</div>
+								</section>
 								
 							</div>
 						</header>
